--- a/package.json
+++ b/package.json
@@ -6,5 +6,10 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@iconify/json": "^2.2.427",
+    "@iconify/tailwind4": "^1.2.0",
+    "daisyui": "^5.5.14"
   }
 }
