--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "tw-bootstrap-grid": "^1.3.3"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.427",
