Reporte De Servicios De TI

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,19 @@ INTRANET_DATABASE_URL=mysql://user:pass@localhost:3306/db_name
 
 SLACK_TEAM_ID=ID del team en slack
 SLACK_BOT_TOKEN=Token del bot de slack
+
+CCTV_USER=
+CCTV_PASSWORD=
+
+PBX_USER=
+PBX_PASSWORD=
+
+IDRAC_USER=
+IDRAC_PASSWORD=
+
+CORREO_SOPORTE_TI=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
